--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
 body {
-
-background-color: aquamarine;
-}
+    background-color: darkgray;
+  }
+  
+  h1 {
+    color: white;
+    text-align: center;
+  }
+  
+  p {
+    font-family: verdana;
+    font-size: 20px;
+  }
