--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 span.a {
-    display: inline; /* the default for span */
+    display: inline; 
     width: 100px;
     height: 100px;
     padding: 5px;
     border: 1px solid blue;
-    background-color: yellow;
+    background-color: gainsboro;
+}
